--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @import url('https://fonts.googleapis.com/css2?family=Story+Script&display=swap'); */
+
 
 html{
     background-color: black;
